5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1643_2445.log
== SUBMITION (2019-04-12 14:50:07) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print((5/9)*(valor-32))
else:
	print((9/5)*C + 32)
-- EXECUTION TIME:
0.159005
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:14) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round((9/5)*C + 32,2))
-- EXECUTION TIME:
0.182733
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:15) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round((9/5)*C + 32,2))
-- EXECUTION TIME:
0.126901
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:16) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round((9/5)*C + 32,2))
-- EXECUTION TIME:
0.245817
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:16) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round((9/5)*C + 32,2))
-- EXECUTION TIME:
0.189087
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:17) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round((9/5)*C + 32,2))
-- EXECUTION TIME:
0.388896
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:17) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round((9/5)*C + 32,2))
-- EXECUTION TIME:
0.439344
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:17) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round((9/5)*C + 32,2))
-- EXECUTION TIME:
0.506159
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:17) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round((9/5)*C + 32,2))
-- EXECUTION TIME:
0.492934
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:17) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round((9/5)*C + 32,2))
-- EXECUTION TIME:
0.500179
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:17) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round((9/5)*C + 32,2))
-- EXECUTION TIME:
0.496434
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:18) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round((9/5)*C + 32,2))
-- EXECUTION TIME:
0.371524
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:18) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round((9/5)*C + 32,2))
-- EXECUTION TIME:
0.355494
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:18) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round((9/5)*C + 32,2))
-- EXECUTION TIME:
0.254191
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:18) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round((9/5)*C + 32,2))
-- EXECUTION TIME:
0.225931
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:38) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round(((9/5)*C + 32),2))
-- EXECUTION TIME:
0.193381
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:39) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round(((9/5)*C + 32),2))
-- EXECUTION TIME:
0.256672
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:51:39) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round(((9/5)*C + 32),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:39) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round(((9/5)*C + 32),2))
-- EXECUTION TIME:
0.226902
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:51:39) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round(((9/5)*C + 32),2))
-- EXECUTION TIME:
0.187181
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:53:20) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round(((9/5)*valor + 32),2))
-- EXECUTION TIME:
0.178376
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:53:20) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()==f):
	print(round((5/9)*(valor-32),2))
else:
	print(round(((9/5)*valor + 32),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (escala.upper()==f):
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:54:19) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()=='f'):
	print(round((5/9)*(valor-32),2))
else:
	print(round(((9/5)*valor + 32),2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:55:21) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()=='f'):
	print(round(((9/5)*valor + 32),2))
else:
	print(round((5/9)*(valor-32),2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:55:33) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()=='f'):
	print(round(((9/5)*valor + 32),2))
else:
	print(round((5/9)*(valor-32),2))
-- EXECUTION TIME:
0.147942
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:55:35) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()=='f'):
	print(round(((9/5)*valor + 32),2))
else:
	print(round((5/9)*(valor-32),2))
-- EXECUTION TIME:
0.332451
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
160.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:55:35) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()=='f'):
	print(round(((9/5)*valor + 32),2))
else:
	print(round((5/9)*(valor-32),2))
-- EXECUTION TIME:
0.191626
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
160.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:55:36) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()=='f'):
	print(round(((9/5)*valor + 32),2))
else:
	print(round((5/9)*(valor-32),2))
-- EXECUTION TIME:
0.200295
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:55:36) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()=='f'):
	print(round(((9/5)*valor + 32),2))
else:
	print(round((5/9)*(valor-32),2))
-- EXECUTION TIME:
0.278059
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
-17.78
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:

-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
160.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:55:36) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()=='f'):
	print(round(((9/5)*valor + 32),2))
else:
	print(round((5/9)*(valor-32),2))
-- EXECUTION TIME:
0.306732
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
-17.78
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:55:36) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()=='f'):
	print(round(((9/5)*valor + 32),2))
else:
	print(round((5/9)*(valor-32),2))
-- EXECUTION TIME:
0.342656
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:

-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
160.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:55:36) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()=='f'):
	print(round(((9/5)*valor + 32),2))
else:
	print(round((5/9)*(valor-32),2))
-- EXECUTION TIME:
0.616212
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:55:36) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()=='f'):
	print(round(((9/5)*valor + 32),2))
else:
	print(round((5/9)*(valor-32),2))
-- EXECUTION TIME:
0.486885
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1643/2445/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:55:36) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()=='f'):
	print(round(((9/5)*valor + 32),2))
else:
	print(round((5/9)*(valor-32),2))
-- EXECUTION TIME:
0.499078
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
-17.78
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:

-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:55:45) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()=='F'):
	print(round(((9/5)*valor + 32),2))
else:
	print(round((5/9)*(valor-32),2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:56:03) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()=='F'):
	print(round(((9/5)*valor + 32),2))
else:
	print(round((5/9)*(valor-32),2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:56:33) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()=='F'):
	print(round((5/9)*(valor-32),2))
else:
	print(round(((9/5)*valor + 32),2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:56:42) 
-- CODE:
escala=input()
valor=int(input())

if (escala.upper()=='F'):
	print(round((5/9)*(valor-32),2))
else:
	print(round(((9/5)*valor + 32),2))
-- EXECUTION TIME:
0.181568
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
